tests/core/errors/test_formatting_data/during_load/TARGETS.fixture
load(":access.bzl", "get")

get([1, 2, 3])
